# cc-vrf

./: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/dice-demo/: package.json  tsconfig.json
apps/dice-demo/src/: cli.ts  commands.ts  connection.ts  state.ts
apps/dice-demo/test/: smoke.test.ts  state.test.ts
apps/website/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/website/public/: skill.md
apps/website/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/website/src/components/: CodeBlock.tsx  TopNav.tsx
apps/website/src/data/: constants.ts  providers.ts
apps/website/src/pages/: EventsPage.tsx  LookupPage.tsx  RegistryPage.tsx  VerifyPage.tsx
apps/website/src/sections/: ClaudeSkill.tsx  ClientDemo.tsx  CostComparison.tsx  Footer.tsx  GetStarted.tsx  Hero.tsx  HowItWorks.tsx  ModesComparison.tsx  References.tsx  ServerSidePattern.tsx  Tools.tsx  WalletDemo.tsx  WhySecureEli5.tsx  WhyWeMadeThis.tsx
apps/website/src/wallet/: AnchorProgram.ts  ReadonlyProgram.ts  WalletProviders.tsx
programs/cc-vrf/: Cargo.toml
programs/cc-vrf/src/: errors.rs  events.rs  lib.rs  state.rs
programs/cc-vrf/src/instructions/: commit_proof.rs  commit_proof_event.rs  commit_proof_with_beta.rs  freeze_authority.rs  init_authority.rs  mod.rs  revoke_authority.rs
tooling/witnet-vector-gen/: Cargo.toml
tooling/witnet-vector-gen/src/: main.rs
