[package]
name = "cc-vrf"
version = "0.1.0"
description = "Permissionless on-chain VRF authority + proof commitment registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cc_vrf"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

# Canonical Light Protocol compressed PDA stack — version-matched to cc-auction.
light-sdk = { version = "0.23.0", features = ["anchor", "cpi-context"] }
light-hasher = "5.0.0"
