[workspace]

[package]
name = "rfc9381-vector-gen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vrf-rfc9381 = { version = "0.0.5", features = ["edwards25519"] }
curve25519-dalek = "5.0.0-pre.6"
sha2 = "0.11"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
